[gd_scene load_steps=8 format=3 uid="uid://b7s8i4yotbhd4"]

[ext_resource type="Script" uid="uid://dx8uq4p6jyxvw" path="res://scenes/battle-scene/scenes_battleScene_gameController.gd" id="1_p7nsj"]
[ext_resource type="Script" uid="uid://d1tg7waqcp1ck" path="res://scenes/battle-scene/scenes_battleScene.gd" id="1_w5c51"]
[ext_resource type="Script" uid="uid://gaj7wrf8fx8r" path="res://scenes/battle-scene/sub_viewport_container.gd" id="2_dgigb"]
[ext_resource type="Texture2D" uid="uid://d3v0aeruwqfx6" path="res://scenes/battle-scene/pause-button.svg" id="7_ftv0g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tpmo"]
bg_color = Color(0.190762, 0.190762, 0.190762, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0yl0"]
bg_color = Color(0.288793, 0.500798, 0.320133, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp0o7"]
bg_color = Color(0, 0, 0, 0.627451)

[node name="BattleScene" type="Node"]
process_mode = 3
script = ExtResource("1_w5c51")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource("2_dgigb")

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/GridContainer/SubViewportContainer"]
process_mode = 1
handle_input_locally = false
size = Vector2i(1700, 867)
render_target_update_mode = 4

[node name="CombatArena" type="Node3D" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("1_p7nsj")

[node name="Floor" type="Node3D" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/CombatArena"]

[node name="Camera3D" type="Camera3D" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.829038, 0.559193, 0, -0.559193, 0.829038, 2.8, 3.15, 4.7)
keep_aspect = 0
projection = 1
fov = 7.0
size = 6.75

[node name="GameSpaceRaycast" type="RayCast3D" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D"]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D"]
process_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer"]
process_mode = 3
top_level = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PanelContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_ftv0g")
ignore_texture_size = true
stretch_mode = 4

[node name="PauseMenu" type="PanelContainer" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -268.0
offset_right = 306.5
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PauseMenu"]
layout_mode = 2
color = Color(0.629675, 0.629675, 0.629675, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PauseMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PauseMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "QUIT TO MAIN MENU"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CanvasLayer/GridContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 0, 0)

[node name="AbilityPanel" type="PanelContainer" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GridContainer/AbilityPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 2
stretch_mode = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
step = 0.1
fill_mode = 3
tint_under = Color(1, 1, 1, 0.294118)

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 2
stretch_mode = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
step = 0.1
fill_mode = 3
tint_under = Color(1, 1, 1, 0.294118)

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 2
stretch_mode = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
step = 0.1
fill_mode = 3
tint_under = Color(1, 1, 1, 0.294118)

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 2
stretch_mode = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
step = 0.1
fill_mode = 3
tint_under = Color(1, 1, 1, 0.294118)

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer5"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer5"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 2
stretch_mode = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer5"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
step = 0.1
fill_mode = 3
tint_under = Color(1, 1, 1, 0.294118)

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer6"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer6"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 2
stretch_mode = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer6"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
step = 0.1
fill_mode = 3
tint_under = Color(1, 1, 1, 0.294118)

[node name="EnergyBar" type="PanelContainer" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GridContainer/EnergyBar"]
layout_mode = 2

[node name="TextureProgressBar" type="ProgressBar" parent="CanvasLayer/GridContainer/EnergyBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_6tpmo")
theme_override_styles/fill = SubResource("StyleBoxFlat_n0yl0")
step = 0.1
value = 20.0
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/GridContainer/EnergyBar/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FireButton" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "FIRE"

[node name="MatchOver" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pp0o7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MatchOver"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MatchResult" type="Label" parent="CanvasLayer/MatchOver/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "YOU WIN/LOSE"

[node name="Control" type="Control" parent="CanvasLayer/MatchOver/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MatchOver/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Button" type="Button" parent="CanvasLayer/MatchOver/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Play Again"

[node name="Button2" type="Button" parent="CanvasLayer/MatchOver/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="item_rect_changed" from="CanvasLayer/GridContainer/SubViewportContainer" to="CanvasLayer/GridContainer/SubViewportContainer" method="_on_sub_viewport_container_item_rect_changed"]
[connection signal="match_over" from="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/CombatArena" to="." method="_on_combat_arena_match_over"]
[connection signal="update_energy_display" from="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/CombatArena" to="." method="_update_energy"]
[connection signal="pressed" from="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PanelContainer/TextureButton" to="." method="_handle_pause_button"]
[connection signal="pressed" from="CanvasLayer/GridContainer/SubViewportContainer/SubViewport/Camera3D/CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer/Button" to="." method="_UI_input_use_ability" binds= [0]]
[connection signal="pressed" from="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer2/Button" to="." method="_UI_input_use_ability" binds= [1]]
[connection signal="pressed" from="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer3/Button" to="." method="_UI_input_use_ability" binds= [2]]
[connection signal="pressed" from="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer4/Button" to="." method="_UI_input_use_ability" binds= [3]]
[connection signal="pressed" from="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer5/Button" to="." method="_UI_input_use_ability" binds= [4]]
[connection signal="pressed" from="CanvasLayer/GridContainer/AbilityPanel/VBoxContainer/MarginContainer6/Button" to="." method="_UI_input_use_ability" binds= [5]]
[connection signal="pressed" from="CanvasLayer/GridContainer/FireButton" to="." method="_UI_input_fire_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MatchOver/VBoxContainer/HBoxContainer/Button" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/MatchOver/VBoxContainer/HBoxContainer/Button2" to="." method="_on_quit_button_pressed"]
